# prompapa

./: .gitignore  AGENTS.md  CAPTURE-RESEARCH.md  CHANGELOG.md  LICENSE  MVP-BUILD-SPEC.md  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.ru.md  README.zh.md  STABILITY-ANALYSIS.md  TODO.md  pyproject.toml
.claude/skills/: readme-write.md
.learnings/: ERRORS.md  FEATURE_REQUESTS.md  LEARNINGS.md
.omc/: project-memory.json
.omc/sessions/: 02ee2287-722e-4986-bdc6-dfe80c15b90b.json  06e26f1b-c60d-494e-a11a-6c0433cca3bc.json  125e1b10-e7fa-4eee-83db-ea1e0fb1da56.json  1513e585-1164-472c-ac72-608760450d83.json  17677f67-11ae-4a63-a28f-d580eeb0a782.json  18279c4a-fc25-4e80-b977-ea2e299aaf28.json  226decea-1cf2-414a-b43a-1a5611fbd454.json  2b700cc2-5ef2-443e-891d-962371ef5d14.json  2c7ef24f-cce5-4d6f-a930-c1c57958867f.json  2e7e370b-520e-4dd3-8d92-bdd98481c1de.json  2f13e50c-f43c-4fe5-9845-c6b69d921d0b.json  30f1ae6c-3f1c-4e56-8594-009356498b99.json  3113b43d-00a6-4814-9cfc-822e6fd9f755.json  382f2164-fe80-4598-876c-29c094485c17.json  458a938a-b5eb-430f-a248-c12df03d4eb3.json  463d69f9-752f-4a43-a524-1290e8b63d4c.json  5258bab7-e98e-414e-ad70-3416cd07bfdb.json  538d7d8f-094d-49ad-baf5-07346b6ba6e4.json  559f3ddc-cbfb-4ffd-af4c-91aa14166cf1.json  58a44920-165b-47bb-95ed-702ac05df2fb.json  597404ee-03bf-4386-a13e-46d88a246529.json  5b23d313-fc44-4674-af03-3e2f6de78a5e.json  (+23 more)
prompapa/: app.py  buffer.py  cli.py  config.py  editor.py  hotkey.py  masking.py  onboard.py  prompts.py  screen.py  translator.py  uninstall.py  update.py
tests/: test_adapters.py  test_app.py  test_buffer.py  test_capture_expansion.py  test_cli.py  test_config.py  test_editor.py  test_masking.py  test_prompts.py  test_screen.py  test_state.py  test_translator.py  test_update.py
tui_translator/: app.py  buffer.py  config.py  state.py  translator.py
(+15 files in other folders)
