[project]
name = "prompapa"
version = "0.1.0"
description = "Terminal TUI for Korean-to-English prompt rewriting"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pyte>=0.8",
]

[project.scripts]
prompapa = "prompapa.app:main"
prompapa-edit = "prompapa.editor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
