[project]
name = "prompapa"
version = "1.1.3"
description = "Translate your native language prompts to English inside Claude Code, Codex, and Opencode"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "pyte>=0.8",
    "questionary>=2.1.1",
]

[project.scripts]
papa = "prompapa.cli:main"
prompapa-edit = "prompapa.editor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
